--- a/application/templates/auth/resend_email.html
+++ b/application/templates/auth/resend_email.html
@@ -1,22 +1,12 @@
 {% extends "layout.html" %}
 {% block title %}Resend email - SmartEats{% endblock %}
-{% block content %}
-<section class="containers">
-    <!-- Login Form -->
-    <div id="login-form">
-        <h2>Resend Email</h2>
-            <form action="{{ url_for('auth.resend_email') }}" method="post">
-                {{ form.hidden_tag() }}
-                <div class="form-group">
-                {{ form.email.label }}
-                {{ form.email(class="form-control") }}
-               {% for error in form.email.errors %}
-                <small class="form-text text-danger">{{ error }}</small>
-                 {% endfor %}
-                </div>
-             <button type="submit" class="btn btn-outline-primary rounded-pill">Resend</button>
 
-            </form>
+{% block content %}
+<div class="container-xxl">
+  <div class="authentication-wrapper authentication-basic container-p-y">
+    <div class="authentication-inner">
+      {% include "auth/partials/resend_email.html" %}
     </div>
-</section>
-{%endblock%}
+  </div>
+</div>
+{% endblock %}
