--- a/application/templates/auth/partials/register.html
+++ b/application/templates/auth/partials/register.html
@@ -4,51 +4,51 @@
     <h4 class="mb-2">Sign Up Today with SmartEats! 👋</h4>
     <p class="mb-4">Your time is valuable. Let us handle the rest while you live your life.</p>
 
-    <form id="registerForm" class="mb-3" action="{{ url_for('auth.register') }}" method="POST">
-      {{ form.hidden_tag() }}
+    <form id="registerForm" class="mb-3" action="{{ url_for('auth.ajax_register') }}" method="POST">
+      {{ register_form.hidden_tag() }}
 
       <!-- First Name -->
       <div class="mb-3">
-        {{ form.username.label(class="form-label") }}
-        {{ form.username(class="form-control", placeholder="Enter first name") }}
+        {{ register_form.username.label(class="form-label") }}
+        {{ register_form.username(class="form-control", placeholder="Enter first name") }}
 
-        {% for error in form.username.errors %}
+        {% for error in register_form.username.errors %}
           <small class="text-danger">{{ error }}</small>
         {% endfor %}
       </div>
 
       <!-- Last Name -->
       <div class="mb-3">
-        {{ form.lastName.label(class="form-label") }}
-        {{ form.lastName(class="form-control", placeholder="Enter last name") }}
+        {{ register_form.lastName.label(class="form-label") }}
+        {{ register_form.lastName(class="form-control", placeholder="Enter last name") }}
 
-        {% for error in form.lastName.errors %}
+        {% for error in register_form.lastName.errors %}
           <small class="text-danger">{{ error }}</small>
         {% endfor %}
       </div>
 
       <!-- Email -->
       <div class="mb-3">
-        {{ form.Email.label(class="form-label") }}
-        {{ form.Email(class="form-control", placeholder="example@email.com") }}
+        {{ register_form.Email.label(class="form-label") }}
+        {{ register_form.Email(class="form-control", placeholder="example@email.com") }}
 
-        {% for error in form.Email.errors %}
+        {% for error in register_form.Email.errors %}
           <small class="text-danger">{{ error }}</small>
         {% endfor %}
       </div>
 
       <!-- Password -->
       <div class="mb-3 form-password-toggle">
-        {{ form.Password.label(class="form-label") }}
+        {{ register_form.Password.label(class="form-label") }}
 
         <div class="input-group input-group-merge">
-          {{ form.Password(class="form-control", placeholder="••••••••") }}
+          {{ register_form.Password(class="form-control", placeholder="••••••••") }}
           <span class="input-group-text cursor-pointer">
             <i class="fas fa-eye-slash"></i>
           </span>
         </div>
 
-        {% for error in form.Password.errors %}
+        {% for error in register_form.Password.errors %}
           <small class="text-danger">{{ error }}</small>
         {% endfor %}
       </div>
