FIxed url linking on landing page

--- a/application/templates/customer/landingpage.html
+++ b/application/templates/customer/landingpage.html
@@ -114,7 +114,7 @@
       <div class="cta-card cta-vendor">
         <h4>Food Vendors</h4>
         <p>Reach thousands of hungry customers. Register your store today.</p>
-        <a href="{{ url_for('auth.ajax_registerstore') }}" class="btn btn-custom btn-light">Register Store</a>
+        <a href="{{ url_for('auth.registerstore') }}" class="btn btn-custom btn-light">Register Store</a>
       </div>
     </div>
 
