--- a/application/templates/adminlayout.html
+++ b/application/templates/adminlayout.html
@@ -148,13 +148,13 @@
 
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('store.ActiveOrders') }}">
-                <i class="fas fa-spinner"></i>
+                <i class="fas fa-receipt"></i>
                 <span>Active Orders</span>
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('store.delivered_orders') }}">
-                <i class="fa fa-check"></i>
+                <i class="fa fa-check-circle"></i>
                 <span>Complete Orders</span>
             </a>
         </li>
@@ -171,7 +171,7 @@
 
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('store.vendor_analytics') }}">
-                <i class="fas fa-user-plus"></i>
+                <i class="fas fa-chart-line"></i>
                 <span>Analytics</span>
             </a>
         </li>
@@ -206,7 +206,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('store.updatestore') }}">
-                <i class="fas fa-plus"></i>
+                <i class="fas fa-wallet"></i>
                 <span>Update Payment Options</span>
             </a>
         </li>
